Revision history for {{$dist->name}}

{{$NEXT}}

0.021     2021-04-14 16:33:51+10:00 Australia/Melbourne
- Add clear method, to remove metric values

0.020     2020-03-23 12:57:16+11:00 Australia/Melbourne
- Rewrite to use Hash::SharedMem for the backend

0.012     2020-03-19 14:35:01+11:00 Australia/Melbourne
- Disable SQLite synchronous writes, and note that the backing store is not intended to be persistent or durable.

0.011     2020-02-27 16:17:58+11:00 Australia/Melbourne
- Make it work under Perl < 5.24 again (no postderef)
- Add init_file option to recreate the underlying file at object construction.
- Make objects reusable across forks

0.010     2020-02-26 21:45:37+11:00 Australia/Melbourne
- Change to using SQLite for the backing store, fixing the situation where
  metrics could be lost if there were lots of them. Minor change to the
  constructor parameters, please check the docs.

0.002     2019-12-22 13:08:58+11:00 Australia/Melbourne
- Update for Prometheus::Tiny 0.004 internals changes, including timestamp and
  histogram support

0.001     2018-07-27 23:25:50+10:00 Australia/Melbourne